Bug 272320 - "Invalid file format" error is coming while opening the attached test data
Summary: "Invalid file format" error is coming while opening the attached test data
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: doc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-03 13:49 UTC by swathi
Modified: 2011-10-25 14:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data (21.50 KB, application/msword)
2011-05-03 13:49 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-05-03 13:49:08 UTC
Created attachment 59570 [details]
Test data

Version: git checkout 7b42d88dd176d98982fb442f393aac5da45da93a 
        (Using KDE 4.5.5)                
     OS: Kubuntu 10.10
Test data is in ms word 2003 format which has embedded calendar control in it.
Open the same document in calligra words.

Expected outcome:
Document should be opened.
Actual outcome:
 “Could not the open the file, Reason:Invalid file format” error dialog box is coming.

Frequency:
Always.
Comment 1 Matus Uzak 2011-05-09 17:52:35 UTC
commit 446b1c277e02a4bc9cdffc40e0d1c184e0061a6e
Comment 2 Matus Uzak 2011-05-09 18:51:33 UTC
Git commit 446b1c277e02a4bc9cdffc40e0d1c184e0061a6e by Matus Uzak.
Committed on 09/05/2011 at 17:45.
Pushed by uzak into branch 'master'.

libmso: DirTree validation update in POLE.

BUG:272320

M  +22   -14   filters/libmso/pole.cpp     

http://commits.kde.org/calligra/446b1c277e02a4bc9cdffc40e0d1c184e0061a6e
Comment 3 swathi 2011-05-13 09:29:36 UTC
Verified in revision 15f2a481ef742bc6f0ded66ca854d29ae6f712ac.
Comment 4 Matus Uzak 2011-10-25 14:14:43 UTC
test: calligratests/import/msword/direntry_name_cmp.xsl