libmso: DirTree validation update in POLE.

BUG:272320